CS_PROD_20150209_01/Metadata/unpackaged/objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>Payment_Plan_Text_Box_Credit_Card__c</fullName>
        <formula>IF( TEXT( Payment_Type__c) == &quot;Credit Card&quot;,
    CASE( TEXT( Payment_Plan__c), 
      &quot;Monthly&quot;, &quot;This payment plan consists of equal payments totaling the amount of the contract (plus applicable sales tax) to be charged via credit card, through an auto-pay system. The first charge will occur at the time the contract is received, the subsequent charges will occur on the same day of the following months until all payments are complete. Cision US, Inc. is hereby authorized to charge the fees as described for Cision services to the credit card provided.&quot;, 
      &quot;3 Equal Payments&quot;, &quot;This payment plan consists of equal payments totaling the amount of the contract (plus applicable sales tax) to be charged via credit card, through an auto-pay system. The first charge will occur at the time the contract is received, the subsequent charges will occur on the same day of the following months until all payments are complete. Cision US, Inc. is hereby authorized to charge the fees as described for Cision services to the credit card provided.&quot;,
      &quot;Quarterly&quot;, &quot;This payment plan consists of 4 equal payments totaling the amount of the contract (plus applicable sales tax) to be charged via credit card, through an auto-pay system. The first charge will occur at the time the contract is received, the subsequent charges will occur on the same day, three months apart. Cision US, Inc. is hereby authorized to charge the fees as described for Cision services to the credit card provided.&quot;,
      &quot;6 Equal Payments&quot;, &quot;This payment plan consists of 6 equal payments totaling the amount of the contract (plus applicable sales tax) to be charged via credit card, through an auto-pay system. The first charge will occur at the time the contract is received, the subsequent charges will occur on the same day of the following 5 months. Cision US, Inc. is hereby authorized to charge the fees as described for Cision services to the credit card provided.&quot;,
      &quot;Biannual&quot;, &quot;This payment plan consists of 2 equal payments totaling the amount of the contract (plus applicable sales tax) to be charged via credit card, through an auto-pay system. The first charge will occur at the time the contract is received, the second charge will occur on the same day 6-months later. Cision US, Inc. is hereby authorized to charge the fees as described for Cision services to the credit card provided.&quot;,
      &quot;Annual&quot;, &quot;This payment plan consists of equal annual invoiced payments totaling the amount of the contract (plus applicable sales tax and handling fee). The first invoice will be generated at the time the contract is received and processed; the remaining invoices will be generated at the inception of the subsequent term year(s).&quot;,
      NULL
    ),
  NULL
)</formula>
        <label>Payment Plan Text Box Credit Card</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Text_Box_Invoice__c</fullName>
        <formula>IF( TEXT( Payment_Type__c) == &quot;Invoice&quot;,
    CASE( TEXT( Payment_Plan__c), 
      &quot;Monthly&quot;, &quot;This payment plan consists of equal invoiced payments totaling the amount of the contract (plus applicable sales tax and handling fee). The first invoice will be generated at the time the contract is received and processed; the subsequent invoices will be generated on the same day of the following months until contract duration is complete.&quot;,
      &quot;3 Equal Payments&quot;, &quot;This payment plan consists of equal invoiced payments totaling the amount of the contract (plus applicable sales tax and handling fee). The first invoice will be generated at the time the contract is received and processed; the subsequent invoices will be generated on the same day of the following two months.&quot;,
      &quot;Quarterly&quot;, &quot;This payment plan consists of 4 equal invoiced payments totaling the amount of the contract (plus applicable sales tax and handling fee). The first invoice will be generated at the time the contract is received and processed; the subsequent invoices will be generated on the same day, three months apart.&quot;,
      &quot;6 Equal Payments&quot;, &quot;This payment plan consists of 6 equal invoiced payments totaling the amount of the contract (plus applicable sales tax and handling fee). The first invoice will be generated at the time the contract is received and processed; the subsequent invoices will be generated on the same day of the following 5 months.&quot;,
      &quot;Biannual&quot;, &quot;This payment plan consists of 2 equal invoiced payments totaling the amount of the contract (plus applicable sales tax and handling fee). The first invoice will be generated at the time the contract is received and processed; the remaining invoices will be generated on the same day 6-months later.&quot;,
      &quot;Annual&quot;, &quot;This payment plan consists of equal annual invoiced payments totaling the amount of the contract (plus applicable sales tax and handling fee). The first invoice will be generated at the time the contract is received and processed; the remaining invoices will be generated at the inception of the subsequent term year(s).&quot;,
      NULL
    ),
  NULL
)</formula>
        <label>Payment Plan Text Box Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <description>Update the Installment Amount formula anytime you make changes to this.</description>
        <label>Payment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Equal Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Equal Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biannual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>SBQQ__PrimaryContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_First_Name__c</fullName>
        <formula>SBQQ__PrimaryContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Full_Name__c</fullName>
        <formula>SBQQ__PrimaryContact__r.FirstName &amp; &quot; &quot; &amp;  SBQQ__PrimaryContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>SBQQ__PrimaryContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Contains_Mon__c</fullName>
        <label>Product Name Contains Mon</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name__c</field>
            <operation>contains</operation>
            <value>Mon</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Overview_Title__c</fullName>
        <formula>IF(
SBQQ__LineItemCount__c &lt; 1,
&quot;Cision Product Overview&quot;,
&quot;Cision Product Overview&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Overview Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotional_Discount_Amount__c</fullName>
        <formula>0 - SBQQ__TotalCustomerDiscountAmount__c -  SBQQ__AdditionalDiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotional Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Expires_On__c</fullName>
        <formula>SBQQ__ExpirationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote_Expires_On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Signature_Name__c</fullName>
        <description>This is the Printed Signature Name on the Quote</description>
        <inlineHelpText>This is the Printed Signature Name on the Quote</inlineHelpText>
        <label>Quote Signature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Template_Order_Form_Header__c</fullName>
        <formula>IF(ISBLANK(SBQQ__Account__r.MSA_Signed_On__c ), &quot;Exhibit A Order Form&quot;, &quot;Order Form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Template Order Form Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_List_Price__c</fullName>
        <label>Renewal List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Require_Contract_Extension_Approval_CGA__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;Renewal (Paid Extension)&quot; &amp;&amp; Is_Global_Analysis__c &gt; 0,
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Contract Extension Approval CGA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Contract_Extension_Approval_Intl__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;Renewal (Paid Extension)&quot; &amp;&amp; Is_Workflow_International_Print__c &gt; 0,
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Contract Extension Approval Intl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Contract_Extension_Approval_MS__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;Renewal (Paid Extension)&quot; &amp;&amp; Is_Workflow_Managed_Services__c &gt; 0,
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Contract Extension Approval MS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Contract_Extension_Approval__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;Renewal (Paid Extension)&quot;,
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Contract Extension Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Copyright_Fee_Discount_Approval__c</fullName>
        <formula>IF( Copyright_Fee_Discount_Amount__c &lt;&gt; 0 ,
  &quot;Yes&quot; ,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Copyright Fee Discount Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Credit_Risk_Approval_Caroline__c</fullName>
        <formula>IF( TEXT( Payment_Type__c) = &quot;Invoice&quot;,
  IF( (SBQQ__Account__r.Paydex__c = 0 || SBQQ__Account__r.Credit_Limit__c = 0) &amp;&amp;  ISBLANK(SBQQ__Account__r.GP_Cust_ID__c) , 
      &quot;Yes&quot;,
      &quot;No&quot;
  ),
  &quot;No&quot;
)</formula>
        <label>Require Credit Risk Approval Caroline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Credit_Risk_Approval__c</fullName>
        <formula>IF( TEXT( Payment_Type__c) = &quot;Invoice&quot;,
  IF( SBQQ__Account__r.Paydex__c &gt; 69,
    IF( SBQQ__Account__r.Credit_Limit__c &gt; SBQQ__NetAmount__c,
      &quot;No&quot;,
      &quot;Yes&quot;
    ),
    &quot;No&quot;
  ),
  &quot;No&quot;
)</formula>
        <label>Require Credit Risk Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Credit_for_Services_Approval__c</fullName>
        <formula>IF( Count_Credit_for_Existing_Services__c &gt; 0 ,
  &quot;Yes&quot; ,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Credit for Services Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Approval_Caroline__c</fullName>
        <formula>IF (

Discount_Approval_AP2_10P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP3_10P_15K_PLUS__c = &quot;Yes&quot; 
|| Discount_Approval_AP5_10P_20P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP6_10P_20P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP8_20P_30P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP9_30P__c = &quot;Yes&quot;,
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Discount Approval Caroline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Approval_Dawn__c</fullName>
        <formula>IF (

Discount_Approval_AP3_10P_15K_PLUS__c = &quot;Yes&quot; 
|| Discount_Approval_AP6_10P_20P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP8_20P_30P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP9_30P__c = &quot;Yes&quot;,
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Discount Approval Dawn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Approval_Sales_Manager__c</fullName>
        <formula>IF (

Discount_Approval_AP1_10P_1K_5K__c = &quot;Yes&quot; 
|| Discount_Approval_AP2_10P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP3_10P_15K_PLUS__c = &quot;Yes&quot; 
|| Discount_Approval_AP4_10P_20P_5K__c = &quot;Yes&quot; 
|| Discount_Approval_AP5_10P_20P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP6_10P_20P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP7_20P_30P_15K__c = &quot;Yes&quot;
|| Discount_Approval_AP8_20P_30P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP9_30P__c = &quot;Yes&quot;,
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <label>Require Discount Approval Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Approval_Sales_VP__c</fullName>
        <formula>IF (

Discount_Approval_AP2_10P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP3_10P_15K_PLUS__c = &quot;Yes&quot; 
|| Discount_Approval_AP5_10P_20P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP6_10P_20P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP7_20P_30P_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP8_20P_30P_15K_PLUS__c = &quot;Yes&quot;
|| Discount_Approval_AP9_30P__c = &quot;Yes&quot;,
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Discount Approval Sales VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Approval__c</fullName>
        <formula>IF( 

Discount_Percent_for_Approval__c &lt; 0.10
&amp;&amp; Discount_Amount_for_Approval__c &lt;= 1000,

&quot;No&quot; ,
&quot;Yes&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Discount Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Post_App_Caroline__c</fullName>
        <description>DELETE IN PRODUCTION</description>
        <formula>IF (Discount_Approval_AP2_10P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP5_10P_20P_5K_15K__c = &quot;Yes&quot;  
|| Discount_Approval_AP7_20P_30P_15K__c = &quot;Yes&quot;,  
&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Discount Post-App Caroline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Post_App_Sales_Manager__c</fullName>
        <description>DELETE IN PRODUCTION</description>
        <formula>IF (Discount_Approval_AP1_10P_1K_5K__c  = &quot;Yes&quot; 
|| Discount_Approval_AP2_10P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP4_10P_20P_5K__c = &quot;Yes&quot;  
|| Discount_Approval_AP5_10P_20P_5K_15K__c = &quot;Yes&quot;  
|| Discount_Approval_AP7_20P_30P_15K__c = &quot;Yes&quot;, 
&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Discount Post-App Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Discount_Post_App_Sales_VP__c</fullName>
        <description>DELETE IN PRODUCTION</description>
        <formula>IF (Discount_Approval_AP2_10P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP5_10P_20P_5K_15K__c = &quot;Yes&quot; 
|| Discount_Approval_AP7_20P_30P_15K__c = &quot;Yes&quot;, 
&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Discount Post-App Sales VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Email_Points_Discount_Approval__c</fullName>
        <formula>IF( Discount_RESCPDIST__c &gt; 5100 ,
  &quot;Yes&quot; ,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Email Points Discount Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Future_Start_Billing_Approval__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;New&quot; 
    || TEXT( SBQQ__Opportunity__r.Type ) = &quot;Upsell&quot; 
    || TEXT( SBQQ__Opportunity__r.Type ) = &quot;Renewal (Paid Extension)&quot;,

  IF( (Billing_Start_Date__c &lt;= SBQQ__StartDate__c + 7) || 
      ((Billing_Start_Date__c &lt;= SBQQ__StartDate__c + 21) 
       &amp;&amp; TEXT( Payment_Plan__c ) = &quot;&quot; 
       &amp;&amp; TEXT( Payment_Type__c ) = &quot;Credit Card&quot;),
    &quot;No&quot;,
    &quot;Yes&quot;
  ),
  IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;Renewal&quot; &amp;&amp; Billing_Start_Date__c &lt;= SBQQ__StartDate__c,
     &quot;No&quot;,
     &quot;Yes&quot;
  )
)</formula>
        <label>Require Future Start Billing Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_International_Address_Approval__c</fullName>
        <formula>IF( ( Opportunity_Shipping_Country__c  &lt;&gt; &quot;USA&quot; ||  SBQQ__BillingCountry__c &lt;&gt; &quot;USA&quot;)
    &amp;&amp; TEXT( Payment_Type__c) = &quot;Invoice&quot;,
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <label>Require International Address Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Intl_Print_Discount_Approval__c</fullName>
        <formula>IF( Discount_MONCPPRINTINTL__c &gt; 0 ,
  &quot;Yes&quot; ,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Intl Print Discount Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Payment_Plan_Approval__c</fullName>
        <formula>IF( TEXT( Monitoring_Billing__c ) = &quot;Monthly&quot;,
  &quot;Yes&quot;,
  CASE( TEXT( Payment_Plan__c ) ,

    &quot;&quot; , &quot;No&quot;,

    &quot;Monthly&quot;, &quot;Yes&quot;,

    &quot;3 Equal Payments&quot;, IF( TEXT( Payment_Type__c ) = &quot;Credit Card&quot;, &quot;No&quot;, &quot;Yes&quot; ) ,

    &quot;Quarterly&quot;, &quot;Yes&quot;,

    &quot;6 Equal Payments&quot;, &quot;Yes&quot;,

    &quot;Biannual&quot;, &quot;Yes&quot;,

    &quot;Yes&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Payment Plan Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Payment_Terms_Approval__c</fullName>
        <formula>IF( OR( ISPICKVAL( SBQQ__PaymentTerms__c , &quot;Net 30&quot; ), AND(ISPICKVAL( SBQQ__PaymentTerms__c , &quot;&quot; ),ISPICKVAL( Payment_Type__c , &quot;Credit Card&quot;) ) ),
  &quot;No&quot; ,
  &quot;Yes&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Payment Terms Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Payment_Type_Approval__c</fullName>
        <formula>IF( Credit_Risk__c = &quot;High&quot; &amp;&amp;  TEXT( Payment_Type__c ) = &quot;Invoice&quot; ,
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <label>Require Payment Type Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Product_Below_Cost_Approval__c</fullName>
        <formula>IF(Is_Product_Discounted_Below_Cost__c &gt; 0, 
&quot;Yes&quot; , 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Product Below Cost Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Subscription_Term_Approval__c</fullName>
        <formula>IF( 
  (( SBQQ__SubscriptionTerm__c &lt; 3 ) 
  &amp;&amp; ISPICKVAL( SBQQ__Opportunity__r.Type , &quot;New&quot; )) ||
  (( SBQQ__SubscriptionTerm__c &lt; 12 ) 
  &amp;&amp;  (Is_Plan_Services__c &gt; 0 ) 
  &amp;&amp; ISPICKVAL( SBQQ__Opportunity__r.Type , &quot;New&quot; )),

  &quot;Yes&quot; ,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Subscription Term Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Training_Approval__c</fullName>
        <formula>IF( Count_Training__c &gt; 0 ,
  &quot;Yes&quot; ,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Require Training Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer account. Defaulted on create from the opportunity.</description>
        <inlineHelpText>Customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount additionally discounted on this quote manually.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AverageCustomerDiscount__c</fullName>
        <description>Average customer discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__ListAmount__c = 0, 0, ((SBQQ__ListAmount__c - SBQQ__CustomerAmount__c) / SBQQ__ListAmount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Customer Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__AveragePartnerDiscount__c</fullName>
        <description>Average partner discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__CustomerAmount__c = 0, 0, (SBQQ__CustomerAmount__c -  SBQQ__NetAmount__c) / SBQQ__CustomerAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average partner discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Partner Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingName__c</fullName>
        <description>Name for the Bil To address.</description>
        <inlineHelpText>Name for the Bil To address.</inlineHelpText>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingStreet__c</fullName>
        <description>Street portion of the billing address for this quote.</description>
        <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscount__c</fullName>
        <description>Additional discount extended to customer.</description>
        <inlineHelpText>Additional discount extended to the customer on this quote. You&apos;ll be able to override this value at individual line item level. Any line items that don&apos;t have additional discount explicitly specified will default to this value.</inlineHelpText>
        <label>Additional  Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DaysQuoteOpen__c</fullName>
        <description>Number of days the quote has been opened.</description>
        <formula>if(OR(ISPICKVAL( SBQQ__Status__c ,&quot;Draft&quot; ),ISPICKVAL( SBQQ__Status__c ,&quot;In Review&quot;),ISPICKVAL( SBQQ__Status__c , &quot;Approved&quot;), ISPICKVAL( SBQQ__Status__c , &quot;Presented&quot;)),Round(NOW() - CreatedDate,0) ,null)</formula>
        <inlineHelpText>Number of days the quote has been opened.</inlineHelpText>
        <label>Days Quote Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template that should be used with this quote. QuoteQuickly will use this value to default template selection on &quot;Generate Document&quot; screen.</description>
        <inlineHelpText>Template that should be used with this quote. QuoteQuickly automatically selects the template specified here when you click &quot;Generate Document&quot;</inlineHelpText>
        <label>Default Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeliveryMethod__c</fullName>
        <description>Method used to deliver products on this quote.</description>
        <inlineHelpText>Method used to deliver products on this quote.</inlineHelpText>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Distributor discount that applies to this quote unless overridden on line item level.</description>
        <inlineHelpText>Distributor discount that applies to this quote unless overridden on line item level.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor for this quote. Defaulted from partner on opportunity with role of &quot;Distributor&quot;.</description>
        <inlineHelpText>Distributor for this quote. Defaulted from partner on opportunity with role of &quot;Distributor&quot;.</inlineHelpText>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Quotes</relationshipLabel>
        <relationshipName>DistributorQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__EmailTemplateId__c</fullName>
        <description>ID of email template that will be pre-populated when documents generated from this quote are emailed.</description>
        <inlineHelpText>If you have a specific email template to use for documents generated and emailed from this quote, enter the email template ID here.</inlineHelpText>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>End date for subscriptions in this group.</description>
        <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c)),TODAY() + $Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c, null)</defaultValue>
        <description>Date after which the Quote is no longer valid</description>
        <inlineHelpText>Date after which the Quote is no longer valid</inlineHelpText>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Introduction__c</fullName>
        <description>Introduction that can be printed on the generated PDF document.</description>
        <inlineHelpText>Introduction that can be printed on the generated PDF document.</inlineHelpText>
        <label>Introduction</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Key__c</fullName>
        <description>Unique key used in identifying &quot;shopping cart&quot; quotes without relying on internal IDs.</description>
        <externalId>true</externalId>
        <inlineHelpText>Internal unique key used for identifying &quot;shopping cart&quot; quotes without relying on internal IDs</inlineHelpText>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemCount__c</fullName>
        <description>Number of line items in this quote.</description>
        <inlineHelpText>Number of line items in this quote.</inlineHelpText>
        <label>Line Item Count</label>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsGrouped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option that allows you to use SolutionGroups(TM) or ad hoc groups to categorize and subtotal quote line items.</description>
        <inlineHelpText>Select this option to use SolutionGroups(TM) or add your own groups on the Edit Lines page to categorize and subtotal quote line items.</inlineHelpText>
        <label>Group Line Items</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>